redis.conf: enable again maxmemory and maxmemory-policy, which were removed by mistake

--- a/bliss/config/redis/redis.conf
+++ b/bliss/config/redis/redis.conf
@@ -852,6 +852,7 @@ acllog-max-len 128
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
 # maxmemory <bytes>
+maxmemory 1073741824
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -883,6 +884,7 @@ acllog-max-len 128
 # The default is:
 #
 # maxmemory-policy noeviction
+maxmemory-policy volatile-ttl
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
