--- a/tests/test_configuration/tango/lima_simulator.yml
+++ b/tests/test_configuration/tango/lima_simulator.yml
@@ -55,6 +55,8 @@ device:
   tango_name: id00/mask/simulator1
 - class: Roi2spectrumDeviceServer
   tango_name: id00/roi2spectrum/simulator1
+- tango_name: id00/memcached/simulator1
+  class: MemcachedDeviceServer
 personal_name: simulator
 server: LimaCCDs
 properties:
