--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -171,6 +171,7 @@ nav:
                 - Data format: data_nexus_format.md
                 - Metadata: data_metadata.md
                 - Online visualization:
+                    - Flint: flint/flint.md
                     - Live scans: flint/flint_scan_plotting.md
                     - Custom data plotting: flint/flint_data_plotting.md
                     - Data selection: flint/flint_interaction.md
