--- a/requirements-test-conda-win64.txt
+++ b/requirements-test-conda-win64.txt
@@ -1,13 +1,16 @@
-# Conda requirement file (python 2.7)
+# Conda requirement file
 # Test requirements
 
+black == 18.6b4
+lima-core >= 1.9.6
+lima-camera-simulator >= 1.9.2
+lima-camera-simulator-tango >= 1.9.2
+lima-tango-server >= 1.9.6
+opencv
 py
-pytest > 4.5.0
+pytest == 5.3.5
 pytest-cov
 pytest-mock
-lima-camera-simulator-tango
-lima-tango-server
-scipy
-black == 18.6b4
-umodbus == 1.0.2.1
 pytest-rerunfailures
+scipy
+umodbus == 1.0.2.1
