make sure tmux uses always the smalles available terminal size

--- a/bliss/config/tmux.conf
+++ b/bliss/config/tmux.conf
@@ -190,3 +190,5 @@ bind -Tcopy-mode-vi MouseDown3Pane if -F -t= '#{pane_in_mode}' 'send -X cancel'
 # makes tmux send out the proper escape codes for setting the terminal title
 set-option -g set-titles on
 
+set-option -g window-size smallest
+
