stackmotor: fix config init + simplications

--- a/tests/test_configuration/motors/stackmotor.yml
+++ b/tests/test_configuration/motors/stackmotor.yml
@@ -3,7 +3,7 @@ controller:
     class: StackMotor
     axes:
       # large stroke motor
-      - name: $m0
+      - name: $roby
         tags: real mls
 
       # small stroke motor
