[physics] use fisx element utility functions

--- a/requirements-conda.txt
+++ b/requirements-conda.txt
@@ -48,7 +48,7 @@ tmux >= 2.7
 treelib <= 1.5.5
 typeguard == 2.6.1
 typing_extensions
-fisx
+fisx >= 1.1.9
 
 # Flint
 ipykernel >= 5.2  # make sure qtconsole is working
