--- a/bliss/config/redis/redis_data.conf
+++ b/bliss/config/redis/redis_data.conf
@@ -1015,7 +1015,7 @@ lazyfree-lazy-user-del no
 # threads, if you have a 8 cores, try to use 6 threads. In order to
 # enable I/O threads use the following configuration directive:
 #
-io-threads 4
+#io-threads 4
 #
 # Setting io-threads to 1 will just use the main thread as usually.
 # When I/O threads are enabled, we only use threads for writes, that is
@@ -1024,7 +1024,7 @@ io-threads 4
 # protocol parsing using the following configuration directive, by setting
 # it to yes:
 #
-io-threads-do-reads yes
+#io-threads-do-reads yes
 #
 # Usually threading reads doesn't help much.
 #
