--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,7 +106,7 @@ test_bliss_cov:
     - python scripts/profiling2txt.py
     - sh scripts/print_test_profiling.sh
   variables:
-    PYTEST_ARGS: '--cov bliss --cov-report html:htmlcov --cov-report term --profile --durations=30'
+    PYTEST_ARGS: ''
 
 test_writer_cov:
   # Run hdf5 writer tests with coverage for master only
@@ -123,7 +123,7 @@ test_writer_cov:
     - python scripts/profiling2txt.py
     - sh scripts/print_test_profiling.sh
   variables:
-    PYTEST_ARGS: '--cov nexus_writer_service --cov-report html:htmlcov_writer --cov-report term --profile --durations=30 -m writer --runwritertests'
+    PYTEST_ARGS: '-m writer --runwritertests'
 
 # Tests for windows are disabled for the moment (job begin with .)
 # (they cannot run currently because of (at least) redis version for win64 is limited to v3.2.100)
