add icat support for multiposition objects and extend icat tests

--- a/tests/test_configuration/icat.yml
+++ b/tests/test_configuration/icat.yml
@@ -2,8 +2,9 @@ name: icat
 plugin: bliss
 class: ICATmeta
 
-#objects:
-#  secondary_slits: $secondary_slits
+objects:
+  primary_slit: $primary_slit
+  attenuator01: $att1
 
 positioners:
   sample: [$roby,$robz]
