icat: change parsing of positioners group to be able to deal with insertion device

--- a/tests/test_configuration/icat.yml
+++ b/tests/test_configuration/icat.yml
@@ -8,6 +8,7 @@ objects:
 
 positioners:
   sample: [$roby,$robz]
+  insertion_device_gap: [$roby,$robz]
 
 mapping:
   InstrumentVariables_name: [ $roby.name, $robz.name ]
