--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ test_bliss:
   except:
     - master
   variables:
-    PYTEST_ARGS: ''
+    PYTEST_ARGS: '--ignore tests/nexus_writer'
 
 test_writer:
   # Run hdf5 writer tests without coverage for any branches except the master
@@ -108,7 +108,7 @@ test_bliss_cov:
     - python scripts/profiling2txt.py
     - sh scripts/print_test_profiling.sh
   variables:
-    PYTEST_ARGS: ''
+    PYTEST_ARGS: '--ignore tests/nexus_writer'
 
 test_writer_cov:
   # Run hdf5 writer tests with coverage for master only
@@ -279,7 +279,7 @@ test_bliss_package:
       - htmlcov/
     expire_in: 7 days
   variables:
-    PYTEST_ARGS: ''
+    PYTEST_ARGS: '--ignore tests/nexus_writer'
 
 test_writer_package:
   # Run HDF5 writer tests using the bliss conda package
