--- a/requirements-doc.txt
+++ b/requirements-doc.txt
@@ -1,4 +1,4 @@
 mkdocs>=1.1
-mkdocs-material>=4.6.1
+mkdocs-material==5.5.14  # issue 2257 (support Firefox 60.9.0esr)
 pygments
 pymdown-extensions>=6.3
