--- a/requirements-doc-conda.txt
+++ b/requirements-doc-conda.txt
@@ -5,3 +5,6 @@ graphviz
 pygments
 markdown-inline-graphviz
 markdown>=3.2
+mkdocs>=1.1
+mkdocs-material==5.5.14  # issue 2257 (support Firefox 60.9.0esr)
+pymdown-extensions>=6.3
