--- a/requirements-test-conda.txt
+++ b/requirements-test-conda.txt
@@ -3,10 +3,10 @@
 
 black == 18.6b4
 coilmq
-lima-core >= 1.9.6
+lima-core == 1.9.6
 lima-camera-simulator >= 1.9.2
 lima-camera-simulator-tango >= 1.9.2
-lima-tango-server >= 1.9.6
+lima-tango-server == 1.9.6
 opencv
 py
 pytest == 5.3.5
