--- a/tests/test_configuration/motors/mockup.yml
+++ b/tests/test_configuration/motors/mockup.yml
@@ -55,6 +55,8 @@ controller:
     steps_per_unit: 1000
     velocity: 50
     acceleration: 1
+    encoder: $m2enc
+    check_encoder: False
   - name: m1
     steps_per_unit: 1000
     velocity: 50
@@ -177,6 +179,9 @@ controller:
     high_limit: 5
   encoders:
   - name: m1enc
+    steps_per_unit: 50
+    tolerance: 0.001
+  - name: m2enc
     steps_per_unit: 50
     tolerance: 0.001
   - name: mot_maxee_enc
