--- a/tests/test_configuration/actuator.yml
+++ b/tests/test_configuration/actuator.yml
@@ -1,10 +1,11 @@
-name: actuator
-plugin: bliss
-class: actuator
-controller:
-  - name: _simulation_actuator_controller
-    module: simulation_actuator
-    class: SimulationActuator
-actuator_cmd: set_in
+- name: actuator
+  plugin: bliss
+  class: actuator
+  controller: $_simulation_actuator_controller
+  actuator_cmd: set_in
   
 
+- name: _simulation_actuator_controller
+  plugin: bliss
+  module: simulation_actuator
+  class: SimulationActuator
