bkg_actuator: fix config for simulation_actuator controller

--- a/tests/test_configuration/bkg_calc_controller.yml
+++ b/tests/test_configuration/bkg_calc_controller.yml
@@ -2,9 +2,7 @@
 - plugin: bliss
   name: bkg_actuator
   class: actuator
-  controller:
-        - module: simulation_actuator
-          class: SimulationActuator
+  controller: $_simulation_actuator_controller
   actuator_cmd: set_in
 
 # Simulated counter GAUSSAIN distribution
