[writer] choose chunk shape based on expected shape. Buffer data and write aligned with the chunk size.

--- a/tests/test_configuration/simulation_counters.yml
+++ b/tests/test_configuration/simulation_counters.yml
@@ -17,6 +17,14 @@
   height_factor: 100.0
   noise_factor: 0.1
 -
+  name: sim_ct_linear
+  plugin: bliss
+  class: SimulationCounter
+  distribution: LINEAR
+  mu_offset: 0.0
+  sigma_factor: 1.0
+  noise_factor: 0.0
+-
   name: sim_ct_flat_12
   plugin: bliss
   class: SimulationCounter
