--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -176,6 +176,7 @@ nav:
                 - Metadata: data_metadata.md
                 - Online visualization:
                     - Flint: flint/flint.md
+                    - Startup options: flint/flint_startup_options.md
                     - Live scans: flint/flint_scan_plotting.md
                     - Custom data plotting: flint/flint_data_plotting.md
                     - Data selection: flint/flint_interaction.md
