--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
                       - Actuators: config_actuator.md
                       - APC: config_apc.md
                       - AutoFilter: config_autofilter.md
+                      - BCDU8: config_bcdu8.md
                       - Correlators:
                             - Flex: config_correlator_flex.md
                       - Electrometers:
