--- a/requirements-test-conda.txt
+++ b/requirements-test-conda.txt
@@ -9,7 +9,7 @@ lima-camera-simulator-tango >= 1.9.2
 lima-tango-server > 1.9.6
 # opencv
 py
-pytest == 5.3.5
+pytest
 pytest-cov
 pytest-mock
 pytest-rerunfailures
