--- a/tests/test_configuration/regulation/test.yml
+++ b/tests/test_configuration/regulation/test.yml
@@ -73,6 +73,7 @@
     deadband_time: 3.0
     ramprate: 1.0     
     wait_mode: deadband  
+    max_attempts_before_failure: 3     
 
 - 
     class: SoftLoop          # <== declare a 'SoftLoop' object
@@ -88,7 +89,7 @@
     deadband: 0.1
     deadband_time: 3.0
     ramprate: 1.0  
-    wait_mode: deadband     
+    wait_mode: deadband
 
 
 #============= HARDWARE REGULATION OBJECTS (A CONTROLLER WITH ITS INPUTS, OUTPUTS AND LOOPS) ==============================================================
