Handel server auto initialization
* Run server according to config retrieved from beacon.
  - start with current_configuration
  - fallback to default_configuration in case of error
* Add a mandatory parameter to launch handel server: mca_name
* Remove port parameter
* fix naming (exit->exit_handel; time->timing)
* fix tests
* add test on number of times a pixel is read
* add acquisition number in synchronized_poll_data()

--- a/tests/test_configuration/mca/simu.yml
+++ b/tests/test_configuration/mca/simu.yml
@@ -2,6 +2,10 @@
   module: mca
   class: SimulatedMCA
   plugin: bliss
+  url: tcp://welisa.esrf.fr:8000
+  configuration_directory: C:\\blissadm\\mercury
+  default_configuration: mercury_src.ini
+  detector_mapping: sdd3elts
 
 - name: simu2
   module: mca
