Create qt tests in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,7 +124,24 @@ test_bliss_cov:
     - python scripts/profiling2txt.py
     - sh scripts/print_test_profiling.sh
   variables:
-    PYTEST_ARGS: '--ignore tests/nexus_writer'
+    PYTEST_ARGS: '--ignore tests/nexus_writer --ignore tests/qt'
+
+test_qt_cov:
+  # Run BLISS tests depending on Qt with coverage for master only
+  extends: .template_test_source
+  only:
+    - master
+  tags:
+    - bliss_master
+  artifacts:
+    paths:
+      - htmlcov/
+    expire_in: 7 days
+  after_script:
+    - python scripts/profiling2txt.py
+    - sh scripts/print_test_profiling.sh
+  variables:
+    PYTEST_ARGS: 'tests/qt'
 
 test_writer_cov:
   # Run hdf5 writer tests with coverage for master only
@@ -289,7 +306,17 @@ test_bliss_package:
   tags:
     - bliss_master
   variables:
-    PYTEST_ARGS: '--ignore tests/nexus_writer'
+    PYTEST_ARGS: '--ignore tests/nexus_writer --ignore tests/qt'
+
+test_qt_package:
+  # Run BLISS tests depending on Qt
+  extends: .template_test_package
+  only:
+    - tags
+  tags:
+    - bliss_master
+  variables:
+    PYTEST_ARGS: 'tests/qt'
 
 test_writer_package:
   # Run HDF5 writer tests using the bliss conda package
