--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
                             - 428: config_keithley_428.md
                             - Keithley 3706: config_keithley_3706.md
                       - Keller: config_keller.md
+                      - Lecroy: config_lecroy.md
                       - Machine info: config_machine.md
                       - MCA:
                             - General: config_mca.md
