--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,12 @@ default:
     - conda config --add channels defaults
     - conda config --add channels esrf-bcu
     - conda config --add channels tango-controls
+    - >
+      if [[ -z $CI_MERGE_REQUEST_TARGET_BRANCH_NAME ]];then
+        export COMPARE_BRANCH_NAME="master"
+      else
+        export COMPARE_BRANCH_NAME=$CI_MERGE_REQUEST_TARGET_BRANCH_NAME
+      fi
 
 stages:
   - style
@@ -40,7 +46,7 @@ check_style:
   script:
     - pip install -r requirements-dev.txt
     # run black
-    - LC_ALL=C.UTF-8 black --check --safe $(git diff origin/master... --diff-filter=ACMR --name-only | grep \\.py$)
+    - LC_ALL=C.UTF-8 black --check --safe $(git diff origin/$COMPARE_BRANCH_NAME... --diff-filter=ACMR --name-only | grep \\.py$)
 
 check_style_master:
   stage: style
@@ -52,7 +58,7 @@ check_style_master:
   script:
     - pip install -r requirements-dev.txt
     # run black
-    - LC_ALL=C.UTF-8 black --check --safe $(git diff origin/master... --diff-filter=ACMR --name-only | grep \\.py$)
+    - LC_ALL=C.UTF-8 black --check --safe $(git diff origin/$COMPARE_BRANCH_NAME... --diff-filter=ACMR --name-only | grep \\.py$)
   
 check_lint:
   stage: style
@@ -60,7 +66,7 @@ check_lint:
   script:
     - pip install -r requirements-dev.txt
     # run flake8 on diff between current branch and last common ancestor with master
-    - git diff -U0 origin/master...$CI_COMMIT_SHA | flake8 --diff
+    - git diff -U0 origin/$COMPARE_BRANCH_NAME...$CI_COMMIT_SHA | flake8 --diff
   # allow failure without impacting the rest of the CI (will show an orange warning in the UI)
   allow_failure: true
 
@@ -73,7 +79,7 @@ check_lint:
       if [ $CI_COMMIT_REF_NAME != 'master' ]; then
         # Check for changes manually to circumvent gitlab-ci limitation (issue #1115)
         echo 'Looking for changes...'
-        if ! (git diff --name-only origin/master...$CI_COMMIT_SHA | grep -E "$CHANGES"); then
+        if ! (git diff --name-only origin/$COMPARE_BRANCH_NAME...$CI_COMMIT_SHA | grep -E "$CHANGES"); then
           echo 'Nothing to do'
           exit 0
         fi
