--- a/requirements-test-conda.txt
+++ b/requirements-test-conda.txt
@@ -6,7 +6,7 @@ coilmq
 lima-core >= 1.9.6
 lima-camera-simulator >= 1.9.2
 lima-camera-simulator-tango >= 1.9.2
-lima-tango-server > 1.9.6
+lima-tango-server >= 1.9.11
 # opencv
 py
 pytest
